# mcp_live

./: README.md
src/go/mcp/: go.mod
src/go/mcp/cmd/mcp-server/: main.go
src/go/mcp/pkg/claude/: claude_service.go
src/python/mcp/: .gitignore  README.md  pyproject.toml
src/python/mcp/mcp_fastapi/: __init__.py  main.py
src/python/mcp/tests/: test_main.py
src/typescript/mcp/: .gitkeep  README.md  mcp.ts  package.json  tsconfig.json
src/typescript/mcp/__tests__/: .gitkeep  mcp.test.ts
